Bump to Java 1.8 and clean up code