@@ -45,9 +45,6 @@ android {
             // configure max heap size of the test JVM
             maxHeapSize = '2048m'
 
-            // configure the test JVM arguments
-            jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
-
             // Specify max number of processes (default is 1)
             maxParallelForks = 4
 
